# production-ready-mlops-workflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: DEVLOG.md  ROADMAP.md
notebooks/: 1.0-eda.ipynb  2.0-data_preprocessing.ipynb  3.0-feature_engineering.ipynb  4.0-model_experimentation.ipynb
reports/metrics/: model_cv_results.csv
src/model/: data_preprocessing.py  pipeline_utils.py
tests/unit/model/pipeline_utils/: test_create_breast_cancer_pipeline.py
