[project]
name = "breast-cancer-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=22.0.0",
    "ipykernel>=7.0.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "notebook>=7.4.7",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "seaborn>=0.13.2",
]

[tool.mypy]
files = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pandas", "numpy", "sklearn.*", "joblib", "requests"]
ignore_missing_imports = true
